fixed thinstrip when logged in, added arrows to header btns, removed blue border on thinstrip tabbing, fixed hover state for audience menu, improved contrast on profile tags, fixed a11y issues and added esc key close of profile

--- a/dev/scss/husky100.scss
+++ b/dev/scss/husky100.scss
@@ -2,13 +2,19 @@
 @use "variables";
 @use "mixins";
 
+.site-husky100{
+  thead tr, td {
+    border: 1px solid #ababab !important;
+    padding: 5px; 
+  }
+  tbody>tr:nth-child(odd)>td, tbody>tr:nth-child(odd)>th {
+    background-color: #e2e2e2;
+  }
+}
 #husky100 {
   div#thin-strip {
     top: 0;
   }
-
-
-
   
 
   .grid-item,
@@ -18,7 +24,6 @@
   }
 
   .module-hero-image {
-    margin-top: 55px;
 
     h1 {
       font-size: 65px;
@@ -482,6 +487,10 @@
       -webkit-appearance: none;
       position: relative;
       z-index: 1;
+
+      &:focus-visible, &:focus-within {
+        outline: 1px solid var(--husky-purple);
+      }
     }
 
     li {
